--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
                         <p>Papá es ingeniero, y ahora me cuida todo el dia, es niñero de tiempo completo. </p>
                         <h3 class="font-secondary font-weight-normal text-muted mb-3"><i class="fa fa-male text-primary pr-3"></i>Iveth y Felix</h3>
                         <div class="position-relative">
-                            <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-outline-primary btn-square" href="#"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-primary btn-square mr-1" href="https://twitter.com/dcreate"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-outline-primary btn-square mr-1" href="https://www.facebook.com/felixdc1"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-primary btn-square mr-1" href="https://www.linkedin.com/in/fjesuscarrillo/"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/dcreatedark/"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
@@ -311,8 +311,10 @@
                     <div class="text-center text-md-right mr-md-3 mb-4 mb-md-0">
                         <img class="img-fluid mb-4" src="img/event-1.jpg" alt="">
                         <h4 class="mb-3">Misa</h4>
-                        <p class="mb-2"><a href="#">Tuxpan, Veracruz</a></p>
-                        <p class="mb-0">12:00AM - 13:00PM</p>
+                        <p class="mb-2"><a href="#"><a href="https://goo.gl/maps/nNqo4YRFgda8mqyv6?coh=178573&entry=tt" >Parroquia María Auxiliadora Tuxpan Veracruz, </a>Tuxpan, Veracruz</a></p>
+                        <p class="mb-0">21 de enero de 2024</p>
+                        <p> 12:00AM - 13:00PM</p>
+                        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.5586947817574!2d-97.31196574305181!3d20.970230218551638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d989b25ae548e1%3A0x3488b99a12030e56!2sParroquia%20Mar%C3%ADa%20Auxiliadora%20Tuxpan%20Veracruz!5e0!3m2!1ses-419!2smx!4v1685067740653!5m2!1ses-419!2smx" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -333,15 +335,15 @@
     <div class="container-fluid py-5" id="family">
         <div class="container pt-5 pb-3">
             <div class="section-title position-relative text-center">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Friends & Family</h6>
-                <h1 class="font-secondary display-4">Groomsmen & Bridesmaid</h1>
+                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Abuelos y Padrinos</h6>
+                <h1 class="font-secondary display-4">Mis padrinos </h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
             <div class="row">
                 <div class="col-12 text-center mb-2">
                     <ul class="list-inline mb-4" id="portfolio-flters">
-                        <li class="btn btn-outline-primary font-weight-bold m-1 py-2 px-4" data-filter=".first">Groomsmen</li>
-                        <li class="btn btn-outline-primary font-weight-bold m-1 py-2 px-4" data-filter=".second">Bridesmaid</li>
+                        <li class="btn btn-outline-primary font-weight-bold m-1 py-2 px-4" data-filter=".first">Familia</li>
+                        <li class="btn btn-outline-primary font-weight-bold m-1 py-2 px-4" data-filter=".second">Padrinos</li>
                     </ul>
                 </div>
             </div>
@@ -350,8 +352,8 @@
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/groomsmen-1.jpg" alt="">
                         <div class="bg-secondary text-center p-4">
-                            <h4 class="mb-3">Full Name</h4>
-                            <p class="text-uppercase">Best Friend</p>
+                            <h4 class="mb-3">Jorge Carrasco Reyes</h4>
+                            <p class="text-uppercase">Mi abuelo</p>
                             <div class="d-inline-block">
                                 <a class="mx-2" href="#"><i class="fab fa-twitter"></i></a>
                                 <a class="mx-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -365,8 +367,8 @@
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/bridesmaid-1.jpg" alt="">
                         <div class="bg-secondary text-center p-4">
-                            <h4 class="mb-3">Full Name</h4>
-                            <p class="text-uppercase">Best Friend</p>
+                            <h4 class="mb-3">nombre</h4>
+                            <p class="text-uppercase">Mi padrino</p>
                             <div class="d-inline-block">
                                 <a class="mx-2" href="#"><i class="fab fa-twitter"></i></a>
                                 <a class="mx-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -380,8 +382,8 @@
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/groomsmen-2.jpg" alt="">
                         <div class="bg-secondary text-center p-4">
-                            <h4 class="mb-3">Full Name</h4>
-                            <p class="text-uppercase">Best Friend</p>
+                            <h4 class="mb-3">Martha E. Moreno Mendoza</h4>
+                            <p class="text-uppercase">Mi abuela</p>
                             <div class="d-inline-block">
                                 <a class="mx-2" href="#"><i class="fab fa-twitter"></i></a>
                                 <a class="mx-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -395,8 +397,8 @@
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/bridesmaid-2.jpg" alt="">
                         <div class="bg-secondary text-center p-4">
-                            <h4 class="mb-3">Full Name</h4>
-                            <p class="text-uppercase">Best Friend</p>
+                            <h4 class="mb-3">Nmbre</h4>
+                            <p class="text-uppercase">Mi madrina</p>
                             <div class="d-inline-block">
                                 <a class="mx-2" href="#"><i class="fab fa-twitter"></i></a>
                                 <a class="mx-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -406,36 +408,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
-                    <div class="position-relative mb-2">
-                        <img class="img-fluid w-100" src="img/groomsmen-3.jpg" alt="">
-                        <div class="bg-secondary text-center p-4">
-                            <h4 class="mb-3">Full Name</h4>
-                            <p class="text-uppercase">Best Friend</p>
-                            <div class="d-inline-block">
-                                <a class="mx-2" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="mx-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="mx-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="mx-2" href="#"><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
-                    <div class="position-relative mb-2">
-                        <img class="img-fluid w-100" src="img/bridesmaid-3.jpg" alt="">
-                        <div class="bg-secondary text-center p-4">
-                            <h4 class="mb-3">Full Name</h4>
-                            <p class="text-uppercase">Best Friend</p>
-                            <div class="d-inline-block">
-                                <a class="mx-2" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="mx-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="mx-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="mx-2" href="#"><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </div>
@@ -503,15 +476,15 @@
                 <i class="far fa-heart text-white"></i>
             </div>
             <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-lg btn-outline-light btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-outline-primary btn-square mr-1" href="https://twitter.com/dcreate"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-outline-primary btn-square mr-1" href="https://www.facebook.com/felixdc1"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-outline-primary btn-square mr-1" href="https://www.linkedin.com/in/fjesuscarrillo/"><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/dcreatedark/"><i class="fab fa-instagram"></i></a>
             </div>
             <div class="d-flex justify-content-center py-2">
                 <p class="text-white" href="#">@dcreate</p>
                 <span class="px-3">|</span>
-                <p class="text-white" href="#">7858306688</p>
+                <p class="text-white" href="https://wa.link/3okzqs">7858306688</p>
             </div>
             <p class="m-0">&copy; <a class="text-primary" href="#">dcreate</a>. Diseñado por: <a class="text-primary" href="#">@dcreate</a>
             </p>
