--- a/index.html
+++ b/index.html
@@ -476,13 +476,13 @@
                 <i class="far fa-heart text-white"></i>
             </div>
             <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-outline-primary btn-square mr-1" href="https://twitter.com/dcreate"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-outline-primary btn-square mr-1" href="https://www.facebook.com/felixdc1"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-outline-primary btn-square mr-1" href="https://www.linkedin.com/in/fjesuscarrillo/"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/dcreatedark/"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://twitter.com/dcreate"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.facebook.com/felixdc1"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.linkedin.com/in/fjesuscarrillo/"><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-lg btn-outline-light btn-lg-square" href="https://www.instagram.com/dcreatedark/"><i class="fab fa-instagram"></i></a>
             </div>
             <div class="d-flex justify-content-center py-2">
-                <p class="text-white" href="#">@dcreate</p>
+                <p class="text-white" href="https://github.com/dcreate/">@dcreate</p>
                 <span class="px-3">|</span>
                 <p class="text-white" href="https://wa.link/3okzqs">7858306688</p>
             </div>
