--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                         <p class="mb-2"><a href="#"><a href="https://goo.gl/maps/nNqo4YRFgda8mqyv6?coh=178573&entry=tt" >Parroquia María Auxiliadora Tuxpan Veracruz, </a>Tuxpan, Veracruz</a></p>
                         <p class="mb-0">21 de enero de 2024</p>
                         <p> 12:00AM - 13:00PM</p>
-                        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.5586947817574!2d-97.31196574305181!3d20.970230218551638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d989b25ae548e1%3A0x3488b99a12030e56!2sParroquia%20Mar%C3%ADa%20Auxiliadora%20Tuxpan%20Veracruz!5e0!3m2!1ses-419!2smx!4v1685067740653!5m2!1ses-419!2smx" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+                        <span ><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.5586947817574!2d-97.31196574305181!3d20.970230218551638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d989b25ae548e1%3A0x3488b99a12030e56!2sParroquia%20Mar%C3%ADa%20Auxiliadora%20Tuxpan%20Veracruz!5e0!3m2!1ses-419!2smx!4v1685067740653!5m2!1ses-419!2smx" width="310" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></span>
                     </div>
                 </div>
                 <div class="col-md-6">
