--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <div class="col-md-6 p-0 text-center text-md-right">
                     <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-5">
                         <h3 class="mb-3">La Festejada</h3>
-                        <p>Naci el 27 de diciembre del 2022 a las 9:37a.m. en la Ciudad de Madero, Tamaulipas. Me gusta mucho los videos de Plim plim, nadar, etc.</p>
+                        <p>Naci el 27 de diciembre del 2022 a las 9:37a.m. en la Ciudad de Madero, Tamaulipas. Me gusta mucho los videos de Plim plim, nadar, viajar, soy una bebé muy sociable.</p>
                         <h3 class="font-secondary font-weight-normal text-muted mb-3"><i class="fa fa-female text-primary pr-3"></i>Eva</h3>
                     </div>
                 </div>
@@ -180,7 +180,7 @@
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 ml-md-3">
                             <h4 class="mb-2">Mi primer dia de vida</h4>
                             <p class="text-uppercase mb-2">27 de diciembre de 2022</p>
-                        <p class="m-0">Papás llegaron al hospital una tarde antes de lo programado (claro fui cesarea). El dia de mi nacimiento, mamá fue ingresada a quirofano desde temprano, a las 6 a.m. todo para que realizar la operacion. Y naci hasta las 9:37a.m.</p>
+                        <p class="m-0">Mis papás llegaron al hospital una tarde antes de lo programado (claro fui cesarea). El dia de mi nacimiento, mamá fue ingresada a quirofano desde temprano, a las 6 a.m. todo para realizar la operacion. Y naci hasta las 9:37a.m.</p>
                         </div>
                     </div>
                 </div>
