--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 mr-md-3">
                             <h4 class="mb-2">Mi segundo dia de vida</h4>
                             <p class="text-uppercase mb-2">28 de diciembre de 2022</p>
-                            <p class="m-0">AL otro dia de nacida, despues de darnos de alta del hospital, nos fuimos directamente a casa de mis abuelos para que me conocieran, me recibieron con mucha alegria. Claro soy la nieta consentida</p>
+                            <p class="m-0">Al siguiente dia de nacida, despues de darnos de alta del hospital, nos fuimos directamente a casa de mis abuelos para que me conocieran, me recibieron con mucha alegria. Claro soy la nieta consentida</p>
                         </div>
                     </div>
                     <div class="col-md-6 text-center text-md-left">
@@ -213,7 +213,7 @@
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 mr-md-3">
                             <h4 class="mb-2">Meses despues</h4>
                             <p class="text-uppercase mb-2">Año 2023</p>
-                            <p class="m-0">Mi crecimiento es muy normal, pasan los meses y estoy muy sana, solo que dicen que estoy muy alta o grande comoarada a mi edad. Cada mes mis papás me llevan a sesiones de fotos, mi abuelita me hace vestidos de princesas para estas fotos.</p>
+                            <p class="m-0">Mi crecimiento es muy normal, pasan los meses y estoy muy sana, solo que dicen que estoy muy alta o grande comparada a mi edad. Cada mes mis papás me llevan a sesiones de fotos, mi abuelita me hace vestidos de princesas para estas fotos.</p>
                         </div>
                     </div>
                     <div class="col-md-6 text-center text-md-left">
@@ -340,7 +340,8 @@
                         <img class="img-fluid mb-4" src="img/event-2.jpg" alt="">
                         <h4 class="mb-3">Recepcion</h4>
                         <p class="mb-2"><a href="https://goo.gl/maps/NxkU6vZ8fDY97DNA9 " target="_blank" >Calle Francisco Villa Col. Emiliano Zapata, Tuxpan, Veracruz</a></p>
-                        <p class="mb-0">15:00A.M.</p>
+                        <p class="mb-0">Sabado 20 de enero de 2024</p>
+                        <p class="mb-0">15:00hrs.</p>
                         <p></p>
                         <span><iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3725.724203200449!2d-97.3412769247452!3d20.96358798066952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjDCsDU3JzQ4LjkiTiA5N8KwMjAnMTkuMyJX!5e0!3m2!1ses-419!2smx!4v1696539790419!5m2!1ses-419!2smx" width="310" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></span>
                     </div>
