--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="navbar-nav mr-auto py-0">
                 <a href="#family" class="nav-item nav-link">Familia</a>
                 <a href="#event" class="nav-item nav-link">Evento</a>
-                <a href="#rsvp" class="nav-item nav-link">Asistencia</a>
+                <a href="#rsvp" class="nav-item nav-link">Anexos</a>
                 <a href="#contact" class="nav-item nav-link">Contacto</a>
             </div>
         </div>
