--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>Bautizo Eva lucia y Primer año</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta name="viewport" content="width=device-width,user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta content="Invitacion para Bautizo de Eva Lucia " name="keywords">
     <meta content="Invitacion para Bautizo de Eva Lucia " name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/logo.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -331,7 +331,7 @@
                         <h4 class="mb-3">Misa</h4>
                         <p class="mb-2"><a href="https://goo.gl/maps/nNqo4YRFgda8mqyv6?coh=178573&entry=tt" target="_blank">Parroquia María Auxiliadora Tuxpan Veracruz, </a></p>
                         <p class="mb-0">Sabado 20 de enero de 2024</p>
-                        <p></p>
+                        <p class="mb-0">Horario por confirmar</p>
                         <span ><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.5586947817574!2d-97.31196574305181!3d20.970230218551638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d989b25ae548e1%3A0x3488b99a12030e56!2sParroquia%20Mar%C3%ADa%20Auxiliadora%20Tuxpan%20Veracruz!5e0!3m2!1ses-419!2smx!4v1685067740653!5m2!1ses-419!2smx" width="310" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></span>
                     </div>
                 </div>
