--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h1 class="font-secondary text-white mb-n2">Bautizo <span class="text-primary">de</span> Eva Lucia</h1>
             </a>
             <div class="navbar-nav mr-auto py-0">
-                <a href="#family" class="nav-item nav-link">Familia</a>
+                <a href="#family" class="nav-item nav-link">Padrinos</a>
                 <a href="#event" class="nav-item nav-link">Evento</a>
                 <a href="#rsvp" class="nav-item nav-link">Anexos</a>
                 <a href="#contact" class="nav-item nav-link">Contacto</a>
