--- a/index.html
+++ b/index.html
@@ -437,8 +437,8 @@
                     <div class="text-center text-md-left ml-md-3">
                         <img class="img-fluid mb-4" src="img/event-4.jpg" alt="">
                         <h4 class="mb-3">Mesa de regalos</h4>
-                        <p class="mb-2"><a href="#" target="_blank"><img src="img/liverpool.png" height="30em" width="120em"> Liverpool </a></p>
-                        <p class="mb-0">Pendiente</p>
+                        <p class="mb-2"><a href="https://mesaderegalos.liverpool.com.mx/milistaderegalos/51332142" target="_blank"><img src="img/liverpool.png" height="30em" width="120em"> Liverpool </a></p>
+                        <p class="mb-0">51332142</p>
                         <p></p>
                         <p class="mb-2"><a href="https://www.amazon.com.mx/registries/gl/guest-view/Q5XS4J693ZG8" target="_blank"><img src="img/amazon.png" height="50em" width="120em"> Amazon </a></p>
                         <p class="mb-0">Lista</p>
