--- a/index.html
+++ b/index.html
@@ -312,6 +312,18 @@
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
+            <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/gallery-14.jpg" alt="">
+                <a href="img/gallery-14.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/gallery-15.jpg" alt="">
+                <a href="img/gallery-15.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
         </div>
     </div>
     <!-- Gallery End -->
