--- a/index.html
+++ b/index.html
@@ -324,7 +324,6 @@
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
-
             <div class="gallery-item">
                 <img class="img-fluid w-100" src="img/gallery-16.jpg" alt="">
                 <a href="img/gallery-16.jpg" data-lightbox="gallery">
@@ -346,6 +345,18 @@
             <div class="gallery-item">
                 <img class="img-fluid w-100" src="img/gallery-19.jpg" alt="">
                 <a href="img/gallery-19.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/gallery-20.jpg" alt="">
+                <a href="img/gallery-20.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/gallery-21.jpg" alt="">
+                <a href="img/gallery-21.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
