--- a/index.html
+++ b/index.html
@@ -384,9 +384,10 @@
                         <img class="img-fluid mb-4" src="img/event-1.jpg" alt="">
                         <h4 class="mb-3">Misa</h4>
                         <p class="mb-2"><a href="https://goo.gl/maps/nNqo4YRFgda8mqyv6?coh=178573&entry=tt" target="_blank">Parroquia María Auxiliadora Tuxpan Veracruz, </a></p>
+                        <p class="mb-0"><br></p>
                         <p class="mb-0">Sabado 20 de enero de 2024</p>
                         <p class="mb-0">12:00hrs.</p>
-                         <p></p>
+                        <p></p>
                         <span ><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.5586947817574!2d-97.31196574305181!3d20.970230218551638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d989b25ae548e1%3A0x3488b99a12030e56!2sParroquia%20Mar%C3%ADa%20Auxiliadora%20Tuxpan%20Veracruz!5e0!3m2!1ses-419!2smx!4v1685067740653!5m2!1ses-419!2smx" width="310" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></span>
                     </div>
                 </div>
@@ -394,11 +395,11 @@
                     <div class="text-center text-md-left ml-md-3">
                         <img class="img-fluid mb-4" src="img/event-2.jpg" alt="">
                         <h4 class="mb-3">Recepcion</h4>
-                        <p class="mb-2"><a href="https://goo.gl/maps/NxkU6vZ8fDY97DNA9 " target="_blank" >Calle Francisco Villa Col. Emiliano Zapata, Tuxpan, Veracruz</a></p>
+                        <p class="mb-2"><a href="https://maps.app.goo.gl/NkChT6kaFBuEDCCQ6" target="_blank" ><em> Salon Elegancia kids;  </em> Calle L. Cárdenas LB, Miguel Alemán Valdez, 92820 Túxpam de Rodríguez Cano, Ver.</a></p>
                         <p class="mb-0">Sabado 20 de enero de 2024</p>
                         <p class="mb-0">15:00hrs.</p>
                         <p></p>
-                        <span><iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3725.724203200449!2d-97.3412769247452!3d20.96358798066952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjDCsDU3JzQ4LjkiTiA5N8KwMjAnMTkuMyJX!5e0!3m2!1ses-419!2smx!4v1696539790419!5m2!1ses-419!2smx" width="310" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></span>
+                        <span><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d476894.01370316156!2d-97.4051734!3d20.9631754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d98af209d88f81%3A0xc3fed07fa1f06f9e!2sSalon%20Elegancia!5e0!3m2!1ses-419!2smx!4v1705461914592!5m2!1ses-419!2smx" width="310" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></span>
                     </div>
                 </div>
             </div>
