--- a/index.html
+++ b/index.html
@@ -360,6 +360,19 @@
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
+
+            <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/gallery-22.jpg" alt="">
+                <a href="img/gallery-22.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <img class="img-fluid w-100" src="img/gallery-23.jpg" alt="">
+                <a href="img/gallery-23.jpg" data-lightbox="gallery">
+                    <i class="fa fa-2x fa-plus text-white"></i>
+                </a>
+            </div>
         </div>
     </div>
     <!-- Gallery End -->
